<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:background="@color/dialog_background">

    <LinearLayout
        android:id="@+id/copyPlantDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/_50sdp"
        android:paddingTop="@dimen/_10sdp"
        android:paddingRight="@dimen/_50sdp"
        android:paddingBottom="@dimen/_5sdp"
        android:gravity="center">

        <TextView
            style="@style/generic_card_text"
            android:textAlignment="center"
            android:text="@string/confirm_archive"
            android:textSize="@dimen/_12sdp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/_5sdp">

            <Button
                android:id="@+id/confirmArchiveBtn"
                style="@style/dialog_buttons"
                android:layout_margin="@dimen/_5sdp"
                android:text="@string/archive"/>

            <Button
                android:id="@+id/cancelArchiveBtn"
                style="@style/dialog_buttons"
                android:layout_margin="@dimen/_10sdp"
                android:text="@string/cancel" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>